<resources>
    <string name="app_name">EVA2_10_PREFERENCES</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string-array name="ENTRADAS">
        <item> Domingo </item>
        <item> Lunes </item>
        <item> Martes </item>
        <item> Miercoles </item>
        <item> Jueves </item>
        <item> Viernes </item>
        <item> Sabado </item>
    </string-array>

    <string-array name="SALIDAS">
        <item> 0 </item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
    </string-array>
</resources>
